Fixed cart font sizes on smaller screens

--- a/css/cart.less
+++ b/css/cart.less
@@ -255,6 +255,9 @@ Main Components
   font-weight: 700;
   letter-spacing: .1em;
 }
+.cd-cart h3 {
+    font-size: 1.1rem;
+}
 .cd-cart .undo {
   float: right;
   font-size: 1.2rem;
@@ -283,7 +286,7 @@ Main Components
   background: @flavor-color;
   color: rgba(255, 255, 255, 0);
   text-align: center;
-  font-size: 1.8rem;
+  font-size: 1.4rem;
   font-weight: 600;
   -webkit-transition: all .2s 0s;
   transition: all .2s 0s;
@@ -563,7 +566,7 @@ Main Components
             animation: cd-item-move-down .3s;
   }
   .cd-cart .checkout {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
   }
   .cd-cart .product-image {
     width: 90px;
@@ -573,7 +576,7 @@ Main Components
     width: calc( 100% - 90px);
   }
   .cd-cart h3, .cd-cart .price {
-    font-size: 1rem;
+    font-size: 1.3rem;
   }
 }
 
